add a link to gumroad download

--- a/hub.html
+++ b/hub.html
@@ -3,7 +3,8 @@
 
 <html lang="eng"><head><meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Taruen | Hub</title>
-<link rel="stylesheet" type="text/css" href="style.css" /></head>
+<link rel="stylesheet" type="text/css" href="style.css" />
+<script src="https://gumroad.com/js/gumroad.js"></script></head>
 <body><h1>Taruen | Hub</h1>
 <h2>Docker containers for various natural language processing tasks</h2>
 <form><fieldset><legend>Download</legend>
@@ -13,4 +14,4 @@
 <select name="task"><option value="stt">Speech-to-text (STT)</option></select>
 <p>Host machine type: </p>
 <select name="host"><option value="cpu-only">CPU only</option></select>
-<input type="submit" name="download" value="Download" /></fieldset></form></body></html>
+ <a class="gumroad-button" href="https://gum.co/kazakh-stt-cpu" target="_blank">Download</a></fieldset></form></body></html>
